fixed overflowing navigation bug

--- a/static/stylesheets/styles.css
+++ b/static/stylesheets/styles.css
@@ -122,6 +122,7 @@ a img {
 #content {
     background-color: #FFFFFF;
     border: 1px solid #000000;
+    overflow: hidden;
     border-radius: 10px;
     -moz-border-radius: 10px;
     -webkit-border-radius: 10px;
